--- a/app.json
+++ b/app.json
@@ -2,6 +2,9 @@
   "pages": [
     "pages/home/index",
     "pages/message/index",
+    "pages/sendProgress/index",
+    "pages/setting/index",
+    "pages/idea/index",
     "pages/mine/index"
   ],
   "tabBar": {
@@ -35,13 +38,14 @@
     "van-grid-item": "@vant/weapp/grid-item/index",
     "van-image": "@vant/weapp/image/index",
     "van-button": "@vant/weapp/button/index",
-    "van-tag": "@vant/weapp/tag/index"
+    "van-tag": "@vant/weapp/tag/index",
+    "van-empty": "@vant/weapp/empty/index"
   },
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#5ac387",
     "navigationBarTitleText": "全国大学生实习服务平台",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "white"
   },
   "sitemapLocation": "sitemap.json"
 }
